add test for nullable coversheet without applicant and use shorthand toList